syntax = "proto3";

package dropnshop;

service CartItemService {
  rpc CreateCartItem (CreateCartItemRequest) returns (CartItemResponse);
  rpc ListCartItems (ListCartItemsRequest) returns (ListCartItemsResponse);
  rpc UpdateCartItem (UpdateCartItemRequest) returns (CartItemResponse);
  rpc DeleteCartItem (DeleteCartItemRequest) returns (DeleteCartItemResponse);
}

message CartItem {
  int32 id = 1;
  int32 userId = 2;
  int32 itemId = 3;
  int32 quantity = 4;
  string createdAt = 5;
}

message CreateCartItemRequest {
  int32 userId = 1;
  int32 itemId = 2;
  int32 quantity = 3;
}

message ListCartItemsRequest {
  int32 userId = 1;
}

message UpdateCartItemRequest {
  int32 id = 1;
  int32 quantity = 2;
}

message DeleteCartItemRequest {
  int32 id = 1;
}

message CartItemResponse {
  CartItem cartItem = 1;
}

message ListCartItemsResponse {
  repeated CartItem cartItems = 1;
}

message DeleteCartItemResponse {
  bool success = 1;
}
