syntax = "proto3";

package dropnshop;

service OrderService {
  rpc CreateOrders (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message OrderLine {
  int32 id = 1;
  int32 itemId = 2;
  float price = 3;
  int32 quantity = 4;
  string createdAt = 5;
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  string shippingAddress = 3;
  string createdAt = 4;
  repeated Order orderLines = 5;
}

message CreateOrderLineRequest {
  int32 itemId = 1;
  float price = 2;
  int32 quantity = 3;
}

message CreateOrderRequest {
  int32 userId = 1;
  string shippingAddress = 2;
  repeated CreateOrderLineRequest orderLines = 3;
}

message GetOrderRequest {
  int32 id = 1;
}

message ListOrdersRequest {}

message OrderResponse {
  Order order = 1;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}
