// Original file: protos/cart_item.proto

import type { CartItem as _dropnshop_CartItem, CartItem__Output as _dropnshop_CartItem__Output } from '../dropnshop/CartItem';

export interface ListCartItemsResponse {
  'cartItems'?: (_dropnshop_CartItem)[];
}

export interface ListCartItemsResponse__Output {
  'cartItems'?: (_dropnshop_CartItem__Output)[];
}
